@@ -77,7 +77,8 @@ CreateEmptyPropal=Create empty commercial proposals vierge or from list of produ
 DefaultProposalDurationValidity=Default commercial proposal validity duration (in days)
 UseCustomerContactAsPropalRecipientIfExist=Use customer contact address if defined instead of third party address as proposal recipient address
 ClonePropal=Clone commercial proposal
-ConfirmClonePropal=Are you sure you want to clone this commercial proposal <b>%s</b> ?
+ConfirmClonePropal=Are you sure you want to clone the commercial proposal <b>%s</b> ?
+ConfirmReOpenProp=Are you sure you want to open back the commercial proposal <b>%s</b> ?
 ProposalsAndProposalsLines=Commercial proposal and lines
 ProposalLine=Proposal line
 AvailabilityPeriod=Availability delay
