@@ -77,7 +77,8 @@ CreateEmptyPropal=Créer proposition/devis vierge
 DefaultProposalDurationValidity=Délai de validité par défaut (en jours)
 UseCustomerContactAsPropalRecipientIfExist=Utiliser adresse contact suivi client si défini plutôt que adresse tiers comme destinataire des propositions
 ClonePropal=Cloner proposition commerciale
-ConfirmClonePropal=Êtes-vous sûr de vouloir cloner cette proposition commerciale <b>%s</b> ?
+ConfirmClonePropal=Êtes-vous sûr de vouloir cloner la proposition commerciale <b>%s</b> ?
+ConfirmReOpenProp=Êtes-vous sûr de vouloir réouvrir la proposition commerciale <b>%s</b> ?
 ProposalsAndProposalsLines=Propositions commerciales clientes et lignes de propositions
 ProposalLine=Ligne de proposition
 AvailabilityPeriod=Délai de livraison
