@@ -5,6 +5,7 @@ English Dolibarr ChangeLog
 ***** ChangeLog for 3.2 compared to 3.1 *****
 
 For users:
+- New: Can open back a closed commercial proposal.
 - New: show thirdparty barcode on main tab.
 - New: Can input note (private and public) during note and expenses creation.
 - New: Print ticket show invoice ref into POS module.
